Update pipeline to include details

--- a/test-2/Dockerfile
+++ b/test-2/Dockerfile
@@ -8,9 +8,9 @@ ENV GO111MODULE=on
 
 WORKDIR /app
 
-ARG VERSION
-ARG COMMITSHA
-ARG DESCRIPTION="This is ANZ test"
+# ARG VERSION
+# ARG COMMITSHA
+# ARG DESCRIPTION="This is ANZ test"
 
 # Create appuser
 ENV USER=appuser
@@ -30,7 +30,7 @@ ADD . .
 RUN apk add jq make
 
 # write content to versions file
-RUN ./write-version.sh $VERSION $COMMITSHA $DESCRIPTION
+# RUN ./write-version.sh $VERSION $COMMITSHA $DESCRIPTION
 
 RUN make all
 
