Test version.json file

--- a/test-2/ci/write-tags-task.yml
+++ b/test-2/ci/write-tags-task.yml
@@ -19,4 +19,5 @@ run:
       VERSION=$(cat ../../version/number)
       apk add jq
       ./write-version.sh $VERSION $COMMITSHA $DESCRIPTION
+      cat resource/version.json
 
