--- a/test-2/ci/releases/anz-technical-test-2-chart/templates/service.yaml
+++ b/test-2/ci/releases/anz-technical-test-2-chart/templates/service.yaml
@@ -1,9 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "anz-technical-test-2.fullname" . }}
-  labels:
-    {{- include "anz-technical-test-2.labels" . | nindent 4 }}
+  name: anz-service
 spec:
   type: {{ .Values.service.type }}
   ports:
