--- a/test-2/ci/releases/anz-technical-test-2-chart/templates/deployment.yaml
+++ b/test-2/ci/releases/anz-technical-test-2-chart/templates/deployment.yaml
@@ -4,6 +4,10 @@ metadata:
   name: anz-deployment
 spec:
   replicas: 2
+  serviceName: anz-service
+  selector:
+    matchLabels:
+      app: golang-test
   template:
     spec:
       containers:
