Fix deployment labels

--- a/test-2/ci/releases/anz-technical-test-2-chart/templates/deployment.yaml
+++ b/test-2/ci/releases/anz-technical-test-2-chart/templates/deployment.yaml
@@ -8,6 +8,9 @@ spec:
     matchLabels:
       app: golang-test
   template:
+    metadata:
+      labels:
+        app: golang-test
     spec:
       containers:
         - name: anz-technical-test-2
