Update pipeline to use webhooks

--- a/test-2/ci/pipeline-deploy.yml
+++ b/test-2/ci/pipeline-deploy.yml
@@ -10,7 +10,7 @@ resources:
   - name: golang-version
     type: git
     check_every: 10m
-    webhook_token: koustubhgaikwad
+    webhook_token: ((auth.webhook_token))
     source:
       uri: https://github.com/koustubh25/anz-technical-tests.git
       branch: master
