--- a/test-2/ci/docker-compose-test.yml
+++ b/test-2/ci/docker-compose-test.yml
@@ -8,10 +8,10 @@ services:
       - anz-technical-test-2
     links: 
       - anz-technical-test-2   
-    command: ["ash", "-c", "tail -f /dev/null && chmod a+x test.sh && ./test.sh"]       
+    command: ["ash", "-c", "chmod a+x test.sh && ./test.sh"]       
     volumes: 
       - $PWD/resource/version.json:/version.json
-      - $PWD/ci/unit-test.sh:/test.sh
+      - $PWD/ci/test.sh:/test.sh
 
 
 
